update from Transifex

--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_da.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_da.properties
@@ -1,13 +1,13 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = 
+atd = Detekter sprog automatisk
 
-ast = 
+ast = Asturiansk
 
 be = Hviderussisk
 
-br = 
+br = Bretonsk
 
 ca = Catalansk
 
@@ -21,7 +21,7 @@ category_misc = Diverse
 
 category_typo = Mulig sl\u00e5fejl
 
-checkDone = Kontrol gennemf\u00f8rt, {0} mulige problemer fundet
+checkDone = Kontrol gennemf\u00f8rt, mulige problemer fundet {0}
 
 checkText = &Kontrollere tekst
 
@@ -77,11 +77,11 @@ fr = Fransk
 
 gl = Galicisk
 
-guiAddButton=
+guiAddButton=Tilf\u00f8j
 guiCancelButton = Annuller
 
 guiCheckComplete = LanguageTools kontrol er f\u00e6rdig.
-guiCloseButton=
+guiCloseButton=Luk
 
 guiConfigWindowTitle = LanguageTool Indstillinger
 
@@ -96,19 +96,19 @@ guiMenuAddRules = Hent &regelfil
 
 guiMenuCheckClipboard = &Kontroller tekst i klipholderen
 
-guiMenuFile = &Filer
+guiMenuFile = &Fil
 
 guiMenuHelp = &Hj\u00e6lp
 
 guiMenuHide = &Skjul til systembakken
 
-guiMenuOpen = &\u00c5ben...
+guiMenuOpen = &\u00c5bn...
 
 guiMenuOptions = &Indstillinger...
 
 guiMenuQuit = &Afslut
 
-guiMenuShowMainWindow = \u00c5ben hovedvinduet
+guiMenuShowMainWindow = \u00c5bn hovedvinduet
 
 guiMotherTongue = Dit modersm\u00e5l\:
 
@@ -116,9 +116,9 @@ guiNoErrorsFound = Ingen fejl eller advarsler fundet (sprog\: {0})
 
 guiNoErrorsFoundSelectedText = Ingen fejl eller advarsler fundet i den markerede tekst (sprog\: {0})
 
-guiOKButton = 
+guiOKButton = &OK
 
-guiOOoChangeButton = 
+guiOOoChangeButton = &\u00c6ndr
 
 guiOOoCloseButton = &Luk
 
@@ -128,9 +128,9 @@ guiOOoIgnoreButton = &Ignorer her
 
 guiOOoOptionsButton = In&dstillinger...
 
-guiProgressWindowTitle = LanguageTool\: Kontrollere teks...
+guiProgressWindowTitle = LanguageTool\: Kontrollere tekst...
 
-guiRemoveButton=
+guiRemoveButton=Fjern
 guiReplaceWindowTitle = Erstat tekst
 
 guiReplaceWithOtherText = <anden tekst>
@@ -171,7 +171,7 @@ result1 = <br><b> {0}. Linje {1}, kolonne {2}</b><br>
 
 resultAreaText = Resultater vil vise sig her
 
-resultTime = <br>Time\: {0}ms (including {1}ms for rule matching)<br>
+resultTime = <br>Tid\: {0} ms (inklusiv {1} ms til regelafpr\u00f8vning)<br>
 
 ru = Russisk
 
@@ -201,5 +201,5 @@ whitespace_repetition = Mulig sl\u00e5fejl\: du har gentaget et mellemrum
 
 ro = Rum\u00e6nsk
 
-zh = 
+zh = Kinesisk
 
