--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -1,5 +1,10 @@
 LanguageTool Change Log
 
+1.6 (release planned for 2011-12-30)
+
+ -...
+
+
 1.5 (2011-09-25)
 
  -Added support for Chinese (Tao Lin)
