add some libraries

--- a/trunk/JLanguageTool/libs/README
+++ b/trunk/JLanguageTool/libs/README
@@ -5,7 +5,10 @@ This is the list of libraries used by LanguageTool and their licenses:
 
 commons-lang.jar: Apache License 2.0, http://commons.apache.org/lang/
 commons-logging.jar: Apache License 2.0, http://commons.apache.org/logging/
+commons-validator.jar: Apache License 2.0, http://commons.apache.org/validator/
 bliki.jar: Eclipse Public License 1.0, http://code.google.com/p/gwtwiki/
 @stempelator.lib@: Morfologik-license.txt, http://morfologik.blogspot.com, http://www.cs.put.poznan.pl/dweiss
 junit.jar: Common Public License - v 1.0, CPL.txt, http://www.junit.org
 jWordSplitter.jar: Apache License 2.0, http://www.danielnaber.de/jwordsplitter/
+tika-core-0.9.jar: Apache License 2.0, http://tika.apache.org
+lucene-*.jar: Apache License 2.0, http://lucene.apache.org
