--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle.properties
@@ -1,6 +1,8 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
+transifexTest = Don't translate this string, I'm just testing Transifex.
+
 atd = Automatically detect language
 
 ast = Asturian
