--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -2,7 +2,8 @@ LanguageTool Change Log
 
 1.6 (release planned for 2011-12-30)
 
- -...
+ -Internal changes:
+   -Update to Morfologik 1.5.2, fixes a rare crash for at least German 
 
 
 1.5 (2011-09-25)
