--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -4,6 +4,8 @@ LanguageTool Change Log
 
  -German: 
   -several new rules
+ -Khmer:
+  -configuration of Khmer rules should now work in OpenOffice.org/LibreOffice
   
  -Internal changes:
    -Update to Morfologik 1.5.2, fixes a rare crash for at least German 
