Updated change list for French, Esperanto, Breton.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -3,9 +3,17 @@ LanguageTool Change Log
 1.6 (release planned for 2011-12-30)
 
  -German: 
-  -several new rules
+   -several new rules
  -Khmer:
-  -configuration of Khmer rules should now work in OpenOffice.org/LibreOffice
+   -configuration of Khmer rules should now work in OpenOffice.org/LibreOffice
+ -Breton
+   -updated dictionary from Apertium.
+   -several new rules
+ -French
+   -updated dictionary to use Dicollecte-4.3
+   -fixed false positives
+ -Esperanto
+   -fixed false positives
   
  -Internal changes:
    -Update to Morfologik 1.5.2, fixes a rare crash for at least German 
@@ -28,7 +36,7 @@ LanguageTool Change Log
     for the source of the new data.
    -Serveral new rules
  -French: 
-   -Updated dictionary to use Dicollecte lexique 4.2
+   -Updated dictionary to use Dicollecte-4.2
    -Added and updated a few rules.  A few rules taken from
     Grammalecte-0.0.12 written by Olivier R.
  -Esperanto:
@@ -94,7 +102,7 @@ LanguageTool Change Log
  -English: added a few new rules
  -German: added a few new rules
  -French: 
-   -Updated dictionary to use Dicollecte lexique 4.1
+   -Updated dictionary to use Dicollecte-4.1
    -Added a few new rules
  -Esperanto:
   -Updated list of transitive verbs
@@ -147,7 +155,7 @@ LanguageTool Change Log
 
  -Updated rules and disambiguator for French
 
- -Updated the French dictionary to use Dicollecte lexique 4.0.1
+ -Updated the French dictionary to use Dicollecte-4.0.1
 
  -Updated rules for Russian
 
@@ -203,7 +211,7 @@ LanguageTool Change Log
 
  -Fixed false positives in French rules.
 
- -Updated the French dictionary to use Dicollecte lexique 3.9.1
+ -Updated the French dictionary to use Dicollecte-3.9.1
   provided by Olivier R.
 
  -Updated the Polish dictionary.
