[ru] Add multiwords disambiguation rules

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -14,6 +14,8 @@ LanguageTool Change Log
    -fixed false positives
  -Esperanto
    -fixed false positives
+ -Russian
+   -added multiwords disambiguation rules
   
  -Internal changes:
    -Update to Morfologik 1.5.2, fixes a rare crash for at least German 
