added line for xml-text-editor-0.0.3.jar in libs/README

--- a/trunk/JLanguageTool/libs/README
+++ b/trunk/JLanguageTool/libs/README
@@ -12,3 +12,4 @@ junit.jar: Common Public License - v 1.0, CPL.txt, http://www.junit.org
 jWordSplitter.jar: Apache License 2.0, http://www.danielnaber.de/jwordsplitter/
 tika-core-0.9.jar: Apache License 2.0, http://tika.apache.org
 lucene-*.jar: Apache License 2.0, http://lucene.apache.org
+xml-text-editor-0.0.3.jar: Apache License 2.0, http://code.google.com/p/xml-text-editor/
