[ru] Add new rules

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -16,7 +16,7 @@ LanguageTool Change Log
    -fixed false positives
  -Russian
    -added multiwords disambiguation rules
-  
+   -several new rules
  -Internal changes:
    -Update to Morfologik 1.5.2, fixes a rare crash for at least German 
 
