[eo] updated CHANGES.txt

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -14,6 +14,7 @@ LanguageTool Change Log
    -fixed false positives
  -Esperanto
    -fixed false positives
+   -updated list of transitive verbs
  -Russian
    -added multiwords disambiguation rules
    -several new rules
