--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -9,6 +9,7 @@ LanguageTool Change Log
  -Breton
    -updated dictionary from Apertium.
    -several new rules
+   -corrected and improve styles of messages, thanks to Fulup Jakez.
  -French
    -updated dictionary to use Dicollecte-4.3
    -fixed false positives
