use the current development version of the compound splitter - wrong splits were cause of false alarms in the agreement rule (e.g. "Unterrichtsprogramm")

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -4,6 +4,7 @@ LanguageTool Change Log
 
  -German: 
    -several new rules
+   -updated compound splitter component
  -Khmer:
    -configuration of Khmer rules should now work in OpenOffice.org/LibreOffice
  -Breton
