slightly more verbose; typo fix

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -4,7 +4,7 @@ LanguageTool Change Log
 
  -German: 
    -several new rules
-   -updated compound splitter component
+   -updated compound splitter component to fix some agreement errors
  -Khmer:
    -configuration of Khmer rules should now work in OpenOffice.org/LibreOffice
  -Breton
@@ -39,7 +39,7 @@ LanguageTool Change Log
     agreement rule. It mostly affects words that have a new spelling
     after the spelling reform. See http://www.danielnaber.de/morphologie/
     for the source of the new data.
-   -Serveral new rules
+   -Several new rules
  -French: 
    -Updated dictionary to use Dicollecte-4.2
    -Added and updated a few rules.  A few rules taken from
