--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -20,8 +20,12 @@ LanguageTool Change Log
  -Russian
    -added multiwords disambiguation rules
    -several new rules
+
  -Internal changes:
    -Update to Morfologik 1.5.2, fixes a rare crash for at least German 
+
+ -API:
+   -moved the packages from de.danielnaber.languagetool.* to org.languagetool.*
 
 
 1.5 (2011-09-25)
