new rules from Paolo Bianchini

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -7,19 +7,21 @@ LanguageTool Change Log
    -updated compound splitter component to fix some agreement errors
  -Khmer:
    -configuration of Khmer rules should now work in OpenOffice.org/LibreOffice
- -Breton
+ -Breton:
    -updated dictionary from Apertium.
    -several new rules
    -corrected and improve styles of messages, thanks to Fulup Jakez.
- -French
+ -French:
    -updated dictionary to use Dicollecte-4.3
    -fixed false positives
- -Esperanto
+ -Esperanto:
    -fixed false positives
    -updated list of transitive verbs
- -Russian
+ -Russian:
    -added multiwords disambiguation rules
    -several new rules
+ -Italian:
+   -several new rules (Paolo Bianchini)
 
  -Internal changes:
    -Update to Morfologik 1.5.2, fixes a rare crash for at least German 
