new field BUILD_DATE, date is taken from JAR file

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -28,7 +28,7 @@ LanguageTool Change Log
 
  -API:
    -moved the packages from de.danielnaber.languagetool.* to org.languagetool.*
-
+   -added new public field JLanguageTool.BUILD_DATE
 
 1.5 (2011-09-25)
 
