--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -23,6 +23,8 @@ LanguageTool Change Log
  -Italian:
    -several new rules (Paolo Bianchini)
 
+ -XML output encoding was wrong in server mode on platforms not using UTF-8
+
  -Internal changes:
    -Update to Morfologik 1.5.2, fixes a rare crash for at least German 
 
