[br] - updated the Breton lexicon: enriched tags for proper names.      - fixed several false positives.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -10,7 +10,8 @@ LanguageTool Change Log
  -Breton:
    -updated dictionary from Apertium.
    -several new rules
-   -corrected and improve styles of messages, thanks to Fulup Jakez.
+   -corrected and improve style of messages, translated all messages
+    thanks to Fulup Jakez.
  -French:
    -updated dictionary to use Dicollecte-4.3
    -fixed false positives
