bugfix: file filter didn't display directories, making navigation impossible

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -24,6 +24,8 @@ LanguageTool Change Log
  -Italian:
    -several new rules (Paolo Bianchini)
 
+ -GUI: small cleanup of the user interface
+ 
  -XML output encoding was wrong in server mode on platforms not using UTF-8
 
  -Internal changes:
