added WORD_REPEAT_BEGINNING_RULE which detects repetition at the beginning of successive sentences enabled for [en] and [de]

--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_de.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_de.properties
@@ -41,6 +41,14 @@ desc_repetition = Wortwiederholung (z.B. 'als als')
 
 desc_repetition_short = Wortwiederholung
 
+desc_repetition_beginning = Satzanfangwiederholung bei aufeinanderfolgenden S\u00e4tzen
+
+desc_repetition_beginning_word = Drei aufeinanderfolgende S\u00e4tze beginnen mit demselben Wort.
+
+desc_repetition_beginning_adv = Zwei aufeinanderfolgende S\u00e4tze beginnen mit demselben Konjunktionaladverb.
+
+desc_repetition_beginning_thesaurus = Formulieren Sie den Satz um oder verwenden Sie den Thesaurus (Men\u00fc Extras > Sprache), um ein Synonym zu finden.
+
 desc_unpaired_brackets = Unpaarige Anf\u00fchrungszeichen und Klammern
 
 desc_uppercase_sentence = Gro\u00dfschreibung am Satzanfang
