--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -23,7 +23,9 @@ LanguageTool Change Log
    -several new rules
  -Italian:
    -several new rules (Paolo Bianchini)
-
+ -Tagalog:
+   -new trigram profile
+   
  -GUI: small cleanup of the user interface
  
  -XML output encoding was wrong in server mode on platforms not using UTF-8
