[de] update compound splitter to version 3.3

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -4,7 +4,7 @@ LanguageTool Change Log
 
  -German: 
    -several new rules
-   -updated compound splitter component to fix some agreement errors
+   -updated compound splitter component to fix some agreement errors (jwordsplitter 3.3)
  -Khmer:
    -configuration of Khmer rules should now work in OpenOffice.org/LibreOffice
  -Breton:
