--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -25,6 +25,7 @@ LanguageTool Change Log
    -several new rules (Paolo Bianchini)
  -Tagalog:
    -new trigram profile
+   -new rules
    
  -GUI: small cleanup of the user interface
  
