add some Chinese rules, modify the changes and prepare for the 1.6 release

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -23,6 +23,8 @@ LanguageTool Change Log
    -several new rules
  -Italian:
    -several new rules (Paolo Bianchini)
+ -Chinese:
+   -several new rules (Tao Lin)
  -Tagalog:
    -new trigram profile
    -new rules
