mention author of changes

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -7,7 +7,7 @@ LanguageTool Change Log
    -updated compound splitter component to fix some agreement errors (jwordsplitter 3.3)
  -Khmer:
    -configuration of Khmer rules should now work in OpenOffice.org/LibreOffice
-   -small updates for coherency rules und error rules
+   -small updates for coherency rules und error rules (Nathan Wells)
  -Breton:
    -updated dictionary from Apertium.
    -several new rules
