i18n update from transifex

--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_br.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_br.properties
@@ -1,7 +1,7 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = Automatically detect language
+atd = Anavezout ar yezh diouzhtu
 
 ast = Astureg
 
@@ -13,19 +13,19 @@ ca = Katalaneg
 
 category_case = Pennlizherenno\u00f9
 
-category_false_friend = Mignoned fall
+category_false_friend = Falsmignoned
 
 category_grammar = Yezhadur
 
-category_misc = R\u00e8gles de base
+category_misc = Reolenno\u00f9 diazez
 
-category_typo = Faute de frappe possible
+category_typo = Fazi bizskriva\u00f1 posupl
 
-checkDone = V\u00e9rification termin\u00e9e. Nombre d'alertes \: {0}
+checkDone = Echuet eo gwiria\u00f1 an trao\u00f9. Niver a gudenno\u00f9 kavet \: {0}
 
-checkText = V\u00e9rifier le texte
+checkText = &Gwiria\u00f1 an destenn
 
-correctionMessage = Correction \:
+correctionMessage = Reizhadenn \:
 
 cs = Tchekeg
 
@@ -33,45 +33,45 @@ da = Daneg
 
 de = Alamaneg
 
-desc_comma_whitespace = Espace devant \u00ab\u00a0,\u00a0\u00bb, \u00ab\u00a0)\u00a0\u00bb ou apr\u00e8s \u00ab\u00a0(\u00a0\u00bb
+desc_comma_whitespace = Esaouenn dirak \u00ab\u00a0,\u00a0\u00bb, \u00ab\u00a0)\u00a0\u00bb pe goude \u00ab\u00a0(\u00a0\u00bb
 
-desc_double_punct = Virgules ou points cons\u00e9cutifs
+desc_double_punct = Meur a skej pe bik diouzh renk
 
-desc_repetition = Doublon (\u00ab\u00a0pour pour\u00a0\u00bb, \u00ab\u00a0je je\u00a0\u00bb, etc.)
+desc_repetition = Ger doublet (\u00ab\u00a0evit evit\u00a0\u00bb, \u00ab\u00a0me me\u00a0\u00bb, h.a.)
 
-desc_repetition_short = Doublon
+desc_repetition_short = Ger doublet
 
-desc_unpaired_brackets = Guillemet fermant ou ouvrant manquant
+desc_unpaired_brackets = Mankout a ra ur grommell, ur c'hroched, pe un arouezenn damhe\u00f1vel
 
-desc_uppercase_sentence = Majuscule en d\u00e9but de phrase
+desc_uppercase_sentence = Pennlizherenn e dero\u00f9 ur frazenn
 
-desc_whitespacerepetition = Plusieurs espaces blanches (mauvais format)
+desc_whitespacerepetition = Meur a esaouenn wenn (furmad fall)
 
-double_dots_short = Points cons\u00e9cutifs
+double_dots_short = Daou bik diouzh renk
 
-double_commas_short = Virgules cons\u00e9cutifs
+double_commas_short = Daou skej diouzh renk
 
 en = Saozneg
 
-enterText = Ins\u00e9rez le texte \u00e0 v\u00e9rifier dans l'espace du haut
+enterText = Lakait an destenn da veza\u00f1 gwiriet en takad a-us
 
-enterText2 = Placez le texte \u00e0 v\u00e9rifier ici
+enterText2 = Lakait ama\u00f1 an destenn da veza\u00f1 gwiriet
 
 eo = Esperanteg
 
-errorContext = Contexte \:
+errorContext = Kendestenn \:
 
-errorMessage = Message \:
+errorMessage = Kemennadenn \:
 
 es = Spagnoleg
 
-false_friend = Mignon fall
+false_friend = Falsmignon
 
-false_friend_desc = note concernant les faux-amis \:
+false_friend_desc = notenn a-zivout ar falsmignoned \:
 
-false_friend_hint = Note \: "{0}" ({1}) signifie {2} ({3}).
+false_friend_hint = Notenn \: "{0}" ({1}) a dalvez {2} ({3}).
 
-false_friend_suggestion = Voulez-vous dire {0} ?
+false_friend_suggestion = Ha n'eo ket {0} a felle deoc'h skriva\u00f1 kentoc'h ?
 
 fr = Galleg
 
@@ -80,27 +80,27 @@ gl = Galizeg
 guiAddButton=Ouzhpenna\u00f1...
 guiCancelButton = Nulla\u00f1
 
-guiCheckComplete = La v\u00e9rification de LanguageTool est termin\u00e9e.
+guiCheckComplete = Echuet eo gwiria\u00f1 an trao\u00f9 gant Language Tool.
 guiCloseButton=Serri\u00f1
 
-guiConfigWindowTitle = Options de LanguageTool
+guiConfigWindowTitle = Dibarzhio\u00f9 LanguageTool
 
-guiDemoText = Se texte est un exemple pour pour vous montrer le fonctionnement de LanguageTool. notez que LanguageTool ne comporte pas de correcteur orthographique.
-guiLanguageManagerDialog=Language Module Manager
+guiDemoText = An tamm testenn-ma\u00f1 zo ur skouer evit diskouez deoc'h penaos ez a LanguageTool en-dro. Notit mat ne bled ket LanguageTool gant ar reizhskriva\u00f1.
+guiLanguageManagerDialog=Merour modulenn ar yezho\u00f9
 
-guiMatchCount = Erreurs possibles \:
+guiMatchCount = Fazio\u00f9 posupl \:
 
 guiMenuAbout = Diwar-benn...
 
-guiMenuAddRules = Charger un fichier de r\u00e8gles
+guiMenuAddRules = &Karga\u00f1 ar restr reolenno\u00f9
 
-guiMenuCheckClipboard = V\u00e9rifier le texte dans le presse-papiers
+guiMenuCheckClipboard = Gwiria\u00f1 an destenn er golver
 
 guiMenuFile = &Restr
 
 guiMenuHelp = &Skoazell
 
-guiMenuHide = R\u00e9duire dans la barre des t\u00e2ches
+guiMenuHide = Kuzhat e barrenn an ostilho\u00f9
 
 guiMenuOpen = &Digeri\u00f1...
 
@@ -108,13 +108,13 @@ guiMenuOptions = Di&barzhio\u00f9...
 
 guiMenuQuit = &Kuitaat
 
-guiMenuShowMainWindow = Ouvrir la fen\u00eatre principale
+guiMenuShowMainWindow = Digeri\u00f1 ar prenestr penna\u00f1
 
-guiMotherTongue = Hor yezh vamm \:
+guiMotherTongue = Ho yezh \:
 
-guiNoErrorsFound = Ni alerte ni erreur n'ont \u00e9t\u00e9 trouv\u00e9es (language\: {0})
+guiNoErrorsFound = N'eus bet kavet fazi ebet na kemenn diwall ebet (yezh \: {0})
 
-guiNoErrorsFoundSelectedText = Ni alerte ni erreur n'ont \u00e9t\u00e9 trouv\u00e9es pour le texte s\u00e9lectionn\u00e9 (language\: {0})
+guiNoErrorsFoundSelectedText = N'eus bet kavet fazi ebet na kemenn diwall ebet en destenn diuzet (yezh \: {0})
 
 guiOKButton = &Mat eo
 
@@ -122,84 +122,84 @@ guiOOoChangeButton = Ke&mma\u00f1
 
 guiOOoCloseButton = Serri\u00f1
 
-guiOOoIgnoreAllButton = Ignorer tout
+guiOOoIgnoreAllButton = Na ober van eus netra
 
-guiOOoIgnoreButton = Ignorer
+guiOOoIgnoreButton = Na ober van
 
-guiOOoOptionsButton = Options...
+guiOOoOptionsButton = Dibarzhio\u00f9\u2026
 
-guiProgressWindowTitle = LanguageTool \: V\u00e9rification en cours...
+guiProgressWindowTitle = Ema\u00f1 LanguageTool o wiria\u00f1\u2026
 
-guiRemoveButton=Remove
-guiReplaceWindowTitle = Amsavi\u00f1 an destenn
+guiRemoveButton=Dilemel
+guiReplaceWindowTitle = Erlec'hia\u00f1 an destenn
 
 guiReplaceWithOtherText = <testenn all>
 
-guiRunOnPort = Erounit evel un dafariad dre ar porzh
+guiRunOnPort = La\u00f1sa\u00f1 evel servijer war ar porzh
 
-guiSelectionCheckComplete = La v\u00e9rification de LanguageTool pour le texte s\u00e9lectionn\u00e9 est termin\u00e9e.
+guiSelectionCheckComplete = Echuet eo gwiria\u00f1 an destenn diuzet gant LanguageTool.
 
-guiTagText = &Tag Text
+guiTagText = &Tikedenni\u00f1 an destenn
 
-incorrect_case = Cette phrase ne commence pas par une majuscule
+incorrect_case = Ne grog ket ar frazenn-ma\u00f1 gant ur bennlizherenn
 
 is = Islandeg
 
 it = Italianeg
 
-km = khmer
+km = Khmer
 
-lt = lituanien
+lt = Lituaneg
 
-missing_space_after_comma = Cr\u00e9ez une espace apr\u00e8s la virgule
+missing_space_after_comma = Lakait un esaouenn goude ar skej
 
-ml = malayalam
+ml = Malayalam
 
 nl = Nederlandeg
 
-no_space_after = Ne placez pas d'espace apr\u00e8s une parenth\u00e8se ouvrante
+no_space_after = Esaouenn ebet goude ur grommell digor
 
-no_space_before = Ne placez pas d'espace avant une parenth\u00e8se fermante
+no_space_before = Esaouenn ebet dirak ur grommell serr
 
-no_space_before_dot = Ne placez pas d'espace avant le point
+no_space_before_dot = Esaouenn ebet dirak ur pik
 
 pl = Poloneg
 
-repetition = Faute de frappe possible \: un mot est r\u00e9p\u00e9t\u00e9
+repetition = Fazi bizskriva\u00f1 moarvat \: ur ger zo skrivet div wezh
 
-result1 = <br><b>{0}. Ligne {1}, colonne {2}</b><br>
+result1 = <br><b>{0}. Linenn {1}, bann {2}</b><br>
 
-resultAreaText = Les r\u00e9sultats se trouveront ici.
+resultAreaText = Ama\u00f1 e vo diskouezet an disoc'ho\u00f9.
 
-resultTime = <br>Dur\u00e9e\: {0}ms (y compris {1}ms les v\u00e9rifier les r\u00e8gles)<br>
+resultTime = <br>Pad \: {0}ms (e-barzh {1}ms evit gwiria\u00f1 ar reolenno\u00f9)<br>
 
-ru = Ruseg
+ru = Rusianeg
 
 sk = Slovakeg
 
-sl = slov\u00e9nien
+sl = Sloveneg
 
-space_after_comma = Placer l'espace apr\u00e8s la virgule et non avant
+space_after_comma = Lakait an esaouenn war-lerc'h ar skej ha neket diraza\u00f1
 
-startChecking = Commencement de la v\u00e9rification en {0}
+startChecking = O kregi\u00f1 da wiria\u00f1 a-benn {0}
 
 sv = Svedeg
 
 tl = Tagalog
 
-textLanguage = Yezh an destenn\:
+textLanguage = Yezh an destenn \:
 
-two_commas = Deux virgules cons\u00e9cutives
+two_commas = Daou skej diouzh renk
 
-two_dots = Deux points cons\u00e9cutifs
+two_dots = Daou bik diouzh renk
 
 uk = Ukraineg
 
-unpaired_brackets = Il manque une parenth\u00e8se fermante ou ouvrante, un guillemet fermant ou ouvrant, etc.
+unpaired_brackets = Mankout a ra ur grommell serr pe digor, ur c'hroched serr pe digor, h.a.
 
-whitespace_repetition = Faute de frappe possible \: vous avez r\u00e9p\u00e9t\u00e9 une espace
+whitespace_repetition = Ur fazi bizskriva\u00f1 zo evit doare \: lakaet ez eus bet div esaouenn ganeoc'h
 
 ro = Roumaneg
 
-zh = Chinezeg
+zh = Sinaeg
 
