--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ca.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ca.properties
@@ -167,13 +167,11 @@ pl = Polon\u00e8s
 
 repetition = Possible error tipogr\u00e0fic\: heu repetit una paraula
 
-result1 = <br>\
-<b> {0}. L\u00ednia {1}, columna {2}</b><br>
+result1 = <br>\n<b> {0}. L\u00ednia {1}, columna {2}</b><br>
 
 resultAreaText = Els resultats apareixeran ac\u00ed
 
-resultTime = <br>\r\
-Temps\: {0}ms (incloent {1}ms per a la concordan\u00e7a de regles)<br>
+resultTime = <br>\r\nTemps\: {0}ms (incloent {1}ms per a la concordan\u00e7a de regles)<br>
 
 ru = Rus
 
