--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_pl.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_pl.properties
@@ -21,7 +21,7 @@ category_misc = B\u0142\u0119dy r\u00f3\u017cne
 
 category_typo = Prawdopodobna liter\u00f3wka
 
-checkDone = Sprawdzono, liczba znalezionych potencjalnych problem\u00f3w\: {0}
+checkDone = Sprawdzono. Liczba znalezionych potencjalnych problem\u00f3w\: {0}
 
 checkText = &Sprawd\u017a tekst
 
