--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_fr.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_fr.properties
@@ -128,7 +128,7 @@ guiOOoIgnoreButton = Ignorer
 
 guiOOoOptionsButton = Options...
 
-guiProgressWindowTitle = LanguageTool \: V\u00e9rification en cours...
+guiProgressWindowTitle = LanguageTool \: v\u00e9rification en cours...
 
 guiRemoveButton=Supprimer
 guiReplaceWindowTitle = Remplacer le texte
@@ -177,7 +177,7 @@ ru = Russe
 
 sk = Slovaque
 
-sl = Slov\u00e9nien
+sl = Slov\u00e8ne
 
 space_after_comma = Placer l'espace apr\u00e8s la virgule et non avant
 
