[sl] rule updates by Martin Srebotnjak

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -26,6 +26,8 @@ LanguageTool Change Log
    -several new rules (Paolo Bianchini)
  -Chinese:
    -several new rules (Tao Lin)
+ -Slovenian:
+   -several new rules (Martin Srebotnjak)
  -Tagalog:
    -new trigram profile
    -new rules
